--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -28,7 +28,7 @@
 			"dest": "_render"
 		},
 		{
-			"src": "^/ServicesPsy/([^/]+?)/?$",
+			"src": "^/servicespsy/([^/]+?)/?$",
 			"dest": "_render"
 		},
 		{
